# YT_Downloader

./: .gitignore  LICENSE  README.md  config.py  download.py  gui.py  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: test_config.py  test_download.py  test_gui.py
